--- a/index.html
+++ b/index.html
@@ -323,28 +323,28 @@
           <div class="page-links-group">
             <div class="column">
               <h3>All Pages Links</h3>
-              <a target="_blank" href="home.html" class="page-btn">
+              <a href="home.html" class="page-btn">
                 Home Page
               </a>
-              <a target="_blank" href="project-listing.html" class="page-btn">
+              <a href="project-listing.html" class="page-btn">
                 Project Listing Page
               </a>
-              <a target="_blank" href="project-details-page.html" class="page-btn">
+              <a href="project-details-page.html" class="page-btn">
                 Project Details Page
               </a>
-              <a target="_blank" href="contact-us.html" class="page-btn">
+              <a href="contact-us.html" class="page-btn">
                 Contact Us Page
               </a>
-              <a target="_blank" href="privacy-policy.html" class="page-btn">
+              <a href="privacy-policy.html" class="page-btn">
                 Privacy Policy Page
               </a>
-              <a target="_blank" href="news-blogs.html" class="page-btn">
+              <a href="news-blogs.html" class="page-btn">
                 News & Blogs Page
               </a>
-              <a target="_blank" href="terms-of-use.html" class="page-btn">
+              <a href="terms-of-use.html" class="page-btn">
                 Terms of Use Page
               </a>
-              <a target="_blank" href="about-us.html" class="page-btn">
+              <a href="about-us.html" class="page-btn">
                 About Us Page
               </a>
             </div>
