Project Details Page Updated

--- a/project-details-page.html
+++ b/project-details-page.html
@@ -82,8 +82,79 @@
 
 
 
+  <!-- Project Inquiry Section   -->
 
-  <div style="height: 500px;"></div>
+  <section class="project-inquiry-section">
+    <div class="container">
+      <div class="project-inquiry-container">
+
+        <span class="fakeBtn-gray">حول المشروع</span>
+
+
+        <div class="inquiry-card-main-container">
+
+          <!-- Project Info Container  -->
+          <div class="project-info-container">
+            <h2 class="inquiry-heading">موقع المشروع</h2>
+            <p class="info-content">
+              مشروع في حي الملقا , يتكون من 6 فيلات و قصرين  بمساحات تبداء من 500 م الى 2000 م  بإجمالي مساحة المشروع
+              7500 م. مشروع في منطقة الملقا، يتكون من 6 فلل وقصرين بمساحات تتراوح من 500 متر إلى 2000 متر، بمساحة
+              إجمالية للمشروع تبلغ 7500 متر.
+            </p>
+
+            <ul class="info-icon-list">
+              <li class="info-icon-item">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 28 37" fill="none">
+                  <path
+                    d="M13.8469 0C10.1759 0.00486976 6.65678 1.4653 4.06104 4.06104C1.46529 6.65678 0.00486976 10.1759 0 13.8469C0 23.7878 12.9007 36.2384 13.4488 36.7634C13.5554 36.867 13.6982 36.925 13.8469 36.925C13.9955 36.925 14.1384 36.867 14.245 36.7634C14.7931 36.2384 27.6938 23.7878 27.6938 13.8469C27.6888 10.1759 26.2285 6.65678 23.6327 4.06104C21.0371 1.4653 17.5178 0.00486976 13.8469 0ZM13.8469 20.1933C12.5916 20.1933 11.3646 19.8211 10.321 19.1238C9.27728 18.4264 8.46384 17.4352 7.98349 16.2756C7.50314 15.1159 7.37745 13.8398 7.62232 12.6087C7.86722 11.3776 8.47166 10.2468 9.35923 9.35923C10.2468 8.47166 11.3776 7.86722 12.6087 7.62232C13.8398 7.37745 15.1159 7.50314 16.2756 7.98349C17.4352 8.46382 18.4264 9.27728 19.1238 10.321C19.8211 11.3646 20.1934 12.5916 20.1934 13.8469C20.1923 15.5298 19.5234 17.1434 18.3334 18.3334C17.1434 19.5234 15.5298 20.1923 13.8469 20.1933Z"
+                    fill="#D8B38F" />
+                </svg>
+
+                <p>حي الملقا، الرياض</p>
+              </li>
+              <li class="info-icon-item">
+                <div class="icon-image">
+                  <img src="assets/img/real-state-icon.svg" alt="Icon">
+                </div>
+
+                <p>500 م -700 م - 800 م - 1500 م - 2000 م</p>
+              </li>
+              <li class="info-icon-item">
+                <div class="icon-image">
+                  <img src="assets/img/town-house-icon.svg" alt="Icon">
+                </div>
+
+                <p>8 فلل</p>
+              </li>
+              <li class="info-icon-item">
+                <div class="icon-image">
+                  <img src="assets/img/energy-icon.svg" alt="Icon">
+                </div>
+
+                <p>تصميمات عصرية</p>
+              </li>
+              <li class="info-icon-item">
+                <div class="icon-image">
+                  <img src="assets/img/varified-icon.svg" alt="Icon">
+                </div>
+
+                <p>الممتلكات المتاحة</p>
+              </li>
+            </ul>
+
+            <input type="button" value="حمّل كتيب PDF" class="btn-skin margin" aria-disabled="false" title=""
+              style="opacity: 1; cursor: pointer;">
+          </div>
+
+          <!-- Project Form Image  -->
+
+          <div class="project-form-image">
+            <img src="assets/img/project-form-image.png" alt="Form Image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- Gallery Section -->
@@ -356,11 +427,89 @@
 
   <!-- Gallery Section -->
 
-  <div style="height: 500px;"></div>
 
 
+  <!-- our goal -->
+  <section class="our-goal">
+    <div class="container">
+      <div class="inner-our-goal">
+        <span class="fakeBtn-gray">سمات</span>
+        <h2 class="text-h2 black">مميزات المشروع</h2>
+
+        <!-- cards -->
+        <div class="cards">
+          <!-- single card start -->
+          <div class="single-card">
+            <div class="card-icon">
 
 
+              <img src="assets/img/location-icon.svg" alt="icon" />
+            </div>
+            <h3 class="text-h3 black">موقع مميز</h3>
+            <p class="text-para black">يقع المشروع في حي الملقا بالرياض، ويوفر سهولة الوصول إلى الطرق الرئيسية والخدمات
+              الحيوية والمرافق اليومية.</p>
+          </div>
+          <!-- single card end -->
+
+          <!-- single card start -->
+          <div class="single-card">
+            <div class="card-icon">
+              <img src="assets/img/daimond-icon.svg" alt="icon" />
+            </div>
+            <h3 class="text-h3 black">تصميم عصري</h3>
+            <p class="text-para black">
+              يتميز المشروع بتصميم معماري حديث يجمع بين الجمال والوظيفة، ليمنح تجربة سكنية راقية ومريحة. </p>
+          </div>
+          <!-- single card end -->
+
+          <!-- single card start -->
+          <div class="single-card">
+            <div class="card-icon">
+              <img src="assets/img/arrow.svg" alt="icon" />
+            </div>
+            <h3 class="text-h3 black">وحدات متنوعة</h3>
+            <p class="text-para black">
+              يضم المشروع فيلات وقصور بمساحات مختلفة، مصممة لتناسب احتياجات العائلات وأنماط الحياة المتنوعة.
+            </p>
+          </div>
+          <!-- single card end -->
+
+          <!-- single card start -->
+          <div class="single-card">
+            <div class="card-icon">
+              <img src="assets/img/location-arrows.svg" alt="icon" />
+            </div>
+            <h3 class="text-h3 black">مساحات واسعة</h3>
+            <p class="text-para black">
+              تم تطوير المشروع على مساحة كبيرة توفر توازناً مثالياً بين البناء والمساحات المفتوحة والخصوصية السكنية.
+            </p>
+          </div>
+          <!-- single card end -->
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Our business map -->
+  <section class="our-map">
+    <div class="container">
+      <div class="inner-map">
+        <span class="fakeBtn-gray">شركاء النجاح</span>
+        <h2 class="text-h2 black">خريطة أعمالنا</h2>
+        <p class="text-para-big black text-center para-pding">
+          تتميز مشاريعنا بموقعها الاستراتيجي حيث تغطي نطاق واسع من أحياء منطقة
+          شمال الرياض والتي تمتاز بقربها من الأماكن الحيوية والترفيهية
+          والتعليمية
+        </p>
+
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1092.6694268983535!2d46.638431600978905!3d24.82917634018781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2ee50053df3061%3A0xbd9e34815bed7639!2z2LTYsdmD2Kkg2KPYsdis2KfZhiDYp9mE2YXYudmF2KfYsdmK2Kk!5e1!3m2!1sen!2s!4v1766688813246!5m2!1sen!2s"
+          class="googleMap" style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </section>
 
   <!-- section footer start here -->
   <footer class="footer-main" style="
